// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`re-renders ball divs 1`] = `
<div>
  <section
    class="ball-section"
  >
    <div>
      Beachball
    </div>
    <div>
      Ping Pong Ball
    </div>
    <div>
      Football
    </div>
    <div>
      Curling Ball
    </div>
  </section>
</div>
`;

exports[`re-renders ball divs 2`] = `
<div>
  <section
    class="ball-section"
  >
    <div>
      Cricket Ball
    </div>
    <div>
      Tennis Ball
    </div>
    <div>
      Bowling Ball
    </div>
    <div>
      Basketball
    </div>
  </section>
</div>
`;

exports[`renders ball section 1`] = `
<div>
  <section
    class="ball-section"
  >
    <div>
      Basketball
    </div>
    <div>
      American Football
    </div>
    <div>
      Beachball
    </div>
    <div>
      Ping Pong Ball
    </div>
  </section>
</div>
`;
